[build-system]
requires = [
    "setuptools>=63.0",
    "trove-classifiers",
    "wheel",
    "toml>=0.10.2",
]

build-backend = "setuptools.build_meta"

[project]
name = "sprdpl"
version = "0.0.1"
description = "SPRDPL (Simple Python Recursive-Descent Parsing Library)"
authors = [
    { name = "Zach Wegner", email = "zwegner@gmail.com" },
]
requires-python = ">=3.10"

dependencies = [
]

[tool.setuptools.packages.find]
include = ["sprdpl"]

[project.urls]
"Homepage" = "https://github.com/zwegner/sprdpl"
